Tue Feb  1 15:12:26 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_require.rb (TestRequire#test_require_with_unc):
	  use ``127.0.0.1'' instead of ``localhost'' as host name, because
	  XP or earlier cannot resolv it as NBT hostname.

Tue Feb  1 13:20:39 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/benchmark/test_benchmark.rb (#capture_bench_output):
	  Added explict sleep. Windows have imprecise time support.
	  Thus Tms.new.Add!{} may be or may be not equal 0. The
	  test failure started since r30747.

Tue Feb  1 11:03:47 2011  Ryan Davis  <ryan@lust.local>

	* lib/rubygems*: Import rubygems 1.5.0 (released version @ 1fb59d0)
	* test/rubygems: Ditto

Tue Feb  1 08:01:39 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (console_set_winsize): new method to set
	  console size.  [EXPERIMENTAL]

	* ext/io/console/console.c (console_winsize): use GetWriteFD.

Tue Feb  1 02:28:14 2011  Masaya Tarui  <tarui@ruby-lnag.org>

	* include/ruby/win32.h, win32/win32.c: add rb_w32_inet_ntop.
	  inet_ntop's minimum supported client is Vista.

Tue Feb  1 00:10:30 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/benchmark.rb: fix benchmarck to work with current ruby.
	  patched by Benoit Daloze [ruby-core:33846] [ruby-dev:43143]
	  merged from https://github.com/eregon/ruby/commits/benchmark

	*  lib/benchmark (Report#width): update documentation
	*  lib/benchmark: document the return value of #benchmark and the
	   :list attribute in Report
	*  lib/benchmark (Tms#format): rename variables, use String#%
	   instead of Kernel.format
	*  lib/benchmark: remove undocumented Benchmark::times (an alias
	   of Process::times used twice)
	*  lib/benchmark (#benchmark): use label_width for the caption
	*  lib/benchmark (Tms#initialize): rename variables
	*  lib/benchmark: allow title to not be a String and call #to_s
	*  lib/benchmark (Benchmark#bm): return an Array of the times with
	   the labels