@@ -1,3 +1,7 @@
+Tue Feb  1 20:45:44 2011  Tanaka Akira  <akr@fsij.org>
+
+	* enc/encdb.c: parenthesize macro arguments.
+
 Tue Feb  1 15:12:26 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/ruby/test_require.rb (TestRequire#test_require_with_unc):
